# pymetr

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py  stylesheet_debug.qss  test_controls.py
docs/: _rst_master.txt  api.rst  bible.rst  conf.py  design.rst  factories.rst  index.rst  instrument_gui.rst  instruments.rst  logging.rst  oscilloscope.rst  packaging.rst  properties.rst  quickstart.rst  requirements.txt  sphinx.rst  structure.rst  subsystem_example.rst  subsystem_theory.rst  subsystems.rst  unit-test.rst
examples/: DSOX1204G_script.py  ast_test.py  ast_test_bak.py  click_trace.py  dsox1204g.py  instrument_cli.py  multiaxes.py  plot_test.py  plot_test_2.py  plot_test_3.py  plot_test_4.py  plot_test_5.py  plot_test_6.py  subsystem.ipynb  subsystem_script.py  test.py
pyinstrument/: __init__.py  instruments.py  interfaces.py
pyinstrument.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pymetr/: PyMetr_GUI.py  __init__.py  application.py  core.py  dark_style.py  factories.py  instrument.py  instrument_gui.py  instruments.py  interfaces.py  oscilloscope.py  oscilloscope_subsystems.py  oscope.py  oscope_gui.py  properties.py  pymetr_app.py  styles.qss  subsystem.py  subsystems.py  test.py  visitors.py
scratch/: instrument_bak.py  oscilloscope_bak.py  oscilloscope_gui.py
tests/: conftest.py  test_actions.py  test_core.py  test_instrument.py  test_main.py  test_main_window.py  test_ribbon.py  test_state.py  test_tab_manager.py  test_tree_view.py  test_views.py
utilities/: __init__.py  _init-master.txt  _init_dump.py  _project-tree.txt  (+7 more)
(+313 files in other folders)
