[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymetr"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A Python-based SCPI instrument control and testing framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PySide6>=6.5.0",
    "pyqtgraph>=0.13.3",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0"
]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=pymetr"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pymetr"]